--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 psycopg2==2.9.1
-psycopg2-binary==2.9.9
 SQLAlchemy==1.4.46
+urllib3==1.26.15
 Werkzeug==2.0.1
